--- a/views/register_form.ejs
+++ b/views/register_form.ejs
@@ -11,8 +11,8 @@
     <input name="first_name" placeholder="John" type="text" />
     <label for="second_name">Second Name</label>
     <input name="second_name" placeholder="Smith" type="text" />
-    <label for="email">Email</label>
-    <input name="email" placeholder="Email" type="text" />
+    <label for="username">Username</label>
+    <input name="username" type="text" />
     <label for="password">Password</label>
     <input name="password" type="password" />
     <label for="confirm_password">Confirm Password</label>
