--- a/views/login_form.ejs
+++ b/views/login_form.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>Please log in</h1>
-  <form action="/log-in" method="POST">
-  <label for="email">Email</label>
-  <input name="email" placeholder="email@email.com" type="text" />
+  <form action="" method="POST">
+  <label for="username">Username (Email)</label>
+  <input name="username" placeholder="email@email.com" type="text" />
   <label for="password">Password</label>
   <input name="password" type="password" />
   <button>Log In</button>
