Admin application works

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
         <p>Member: <%= user.isMember %></p>
         <ul>
             <li><a href="/join">Join The Club</a></li>
-            <li><a href="/admin-application">Become An Admin</a></li>
+            <li><a href="/become-admin">Become An Admin</a></li>
             <li><a href="/posts">View Posts</a></li>
             <li><a href="/create_post">Create a Post</a></li>
             <li><a href="/log-out">LOG OUT</a></li>
