--- a/views/admin_form.ejs
+++ b/views/admin_form.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Member Application</title>
+    <title>Admin Application</title>
 </head>
 <body>
-    <h1>Type in the secret code to join The Club</h1>
+    <h1>Type in the secret code to become admin</h1>
     <h3>User <%= currentUser.username %></h3>
     <form action="" method="POST">
     <label for="code">Code</label>
