Hiding names and title works if not logged in

--- a/views/post_form.ejs
+++ b/views/post_form.ejs
@@ -6,7 +6,7 @@
     <title>Create a Post</title>
 </head>
 <body>
-    <h1>Please log in</h1>
+    <h1>Create a new post</h1>
     <form action="" method="POST">
     <label for="title">Title</label>
     <input name="title" type="text" />
