--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -12,7 +12,9 @@
         <% for (var i = 0; i < list_posts.length ; i++) { %>
             <li>
                 <div class="post">
+                    <% if (currentUser) {%>
                     <h2><%= list_posts[i].title %> by <%= list_posts[i].user.username %></h2>
+                    <%} %>
                     <p><%= list_posts[i].body%></p> 
                 </div>
                  
